Fixed footer on mobile browsers

--- a/style.css
+++ b/style.css
@@ -386,6 +386,8 @@
 
 body
 {
+	position: fixed;
+	overflow-y: scroll;
 	margin: auto;
 	height: 100%;
 	font-family: Liberation-Sans;
@@ -394,7 +396,7 @@ body
 
 html
 {
-	overflow-y: scroll;
+	overflow-y: hidden;
 }
 
 h1
